# trustworthy-sdm

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: pilot.yaml
data/: README.md
docs/: paper_a_pilot_additions.md  upstream_api_dependency.md
figures/: panel_conformal.csv  panel_summary.csv
notebooks/: 01_pilot_coverage.py  02_full_panel.py  03_conformal_calibration.py
scripts/: inspect_orchestrator.sh  pilot_regenerate.py  run_rfxgb_l0.py  run_symba_pilot.py  run_symba_pilot_extra.py
slurm/: full_panel_array.sbatch  pilot_torrentium.sbatch  rfxgb_l0_array.sbatch  symba_pilot_array.sbatch  symba_pilot_extra_array.sbatch
src/trustworthy_sdm/: __init__.py  analysis.py  cli.py  conformal.py  io.py  regen.py
tests/: test_analysis_smoke.py  test_assemble_inputs_smoke.py  test_conformal_smoke.py  test_io.py  test_panel_iteration.py
