[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustworthy_sdm"
version = "0.1.0"
description = "Calibrated uncertainty for species distribution models under occurrence-data contamination (Paper A follow-up to Pârvulescu, Petko & Miok)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "Kristian Miok" }]

# We do NOT list sdm-robustness here because it lives outside any package
# index. Install it manually after creating the venv:
#     Mac:    pip install -e ../sdm-robustness
#     VEGA:   pip install -e /ceph/hpc/home/miokk/sdm-robustness
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8",
    "pytest-cov>=5",
    "ipython>=8",
    "jupyter>=1",
]

[project.scripts]
trustworthy-sdm-regenerate = "trustworthy_sdm.cli:regenerate_main"
trustworthy-sdm-inspect = "trustworthy_sdm.cli:inspect_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
